@@ -5,12 +5,12 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("OpenGL assembly")]
+[assembly: AssemblyTitle("OpenGL bindings")]
 [assembly: AssemblyDescription("Provides bindings to the OpenGL functions.")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("OpenGL")]
-[assembly: AssemblyCopyright("Copyright ©  2006 Stefanos Apostolopoulos")]
+[assembly: AssemblyProduct("OpenTK.OpenGL")]
+[assembly: AssemblyCopyright("Copyright ©  2006-2007 Stefanos Apostolopoulos")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -31,5 +31,5 @@ using System.Runtime.InteropServices;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
-[assembly: AssemblyVersion("0.3.6.2")]
-[assembly: AssemblyFileVersion("0.3.6.2")]
+[assembly: AssemblyVersion("0.3.7.1")]
+[assembly: AssemblyFileVersion("0.3.7.1")]
